# fastapi-cars

./: alembic.ini  cars.db  pyproject.toml  requirements.txt
fast_car_api/: app.py  database.py  models.py  routers.py
migrations/versions/: 5baa4b0b0cce_create_cars_table.py
